# ChangeLog for dev-ruby/dalli
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dalli/ChangeLog,v 1.18 2015/07/11 20:23:41 zlogene Exp $

  11 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> dalli-2.7.4-r1.ebuild:
  Add ~x86 keyword wrt bug #551722

  08 Jul 2015; Jeroen Roovers <jer@gentoo.org> dalli-2.7.4-r1.ebuild:
  Mark ~hppa ~ppc64 (bug #551722).

  07 Jul 2015; Markus Meier <maekke@gentoo.org> dalli-2.7.4-r1.ebuild:
  add ~arm, bug #551722

*dalli-2.7.4-r1 (11 Jun 2015)

  11 Jun 2015; Hans de Graaff <graaff@gentoo.org> +dalli-2.7.4-r1.ebuild:
  Revision bump for missing connection_pool test dependency. Dropped alpha,
  arm, hppa, ppc, ppc64, x86 keywords, bug 551722.

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

*dalli-2.7.4 (20 Mar 2015)

  20 Mar 2015; Hans de Graaff <graaff@gentoo.org> +dalli-2.7.4.ebuild:
  Version bump.

  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> dalli-2.6.4.ebuild:
  Keyword ~ppc and ~ppc64, bug #519170

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> dalli-2.6.4.ebuild:
  Remove trailing '.' from DESCRIPTION.

  22 Jul 2014; Tobias Klausmann <klausman@gentoo.org> dalli-2.6.4.ebuild:
  Keyworded on alpha, bug #501152

  04 May 2014; Jeroen Roovers <jer@gentoo.org> dalli-2.6.4.ebuild:
  Marked ~hppa (bug #487206).

  18 Apr 2014; Hans de Graaff <graaff@gentoo.org> dalli-2.6.4.ebuild:
  Add ruby21.

  11 Mar 2014; Johannes Huber <johu@gentoo.org> dalli-2.6.4.ebuild:
  ~x86 added, bug #487206

  25 Dec 2013; Hans de Graaff <graaff@gentoo.org> dalli-2.6.4.ebuild:
  Simplify dependencies and add ruby20.

  02 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -dalli-2.1.0.ebuild,
  -dalli-2.5.0.ebuild:
  Cleanup old.

  13 Oct 2013; Markus Meier <maekke@gentoo.org> dalli-2.6.4.ebuild:
  add ~arm, bug #487206

*dalli-2.6.4 (14 Jul 2013)

  14 Jul 2013; Hans de Graaff <graaff@gentoo.org> +dalli-2.6.4.ebuild: