@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/factory_girl/factory_girl-4.5.0.ebuild,v 1.2 2015/03/24 20:10:21 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/factory_girl/factory_girl-4.5.0.ebuild,v 1.3 2015/08/08 07:34:29 graaff Exp $
 
 EAPI=5
 
@@ -26,11 +26,11 @@ SLOT="0"
 KEYWORDS="~amd64 ~arm ~x86"
 IUSE=""
 
-ruby_add_rdepend ">=dev-ruby/activesupport-3.0.0"
+ruby_add_rdepend ">=dev-ruby/activesupport-3.0.0:*"
 
 ruby_add_bdepend "
 	test? (
-		>=dev-ruby/activerecord-3.1
+		>=dev-ruby/activerecord-3.1[sqlite]
 		dev-ruby/bourne
 		>=dev-ruby/mocha-0.12.8
 		dev-ruby/timecop
